Prepare for Render deployment - clean up files and add deployment configuration

--- a/.env.example
+++ b/.env.example
@@ -1,33 +1,49 @@
 # ValhallaBot2 Environment Configuration
 # Copy this file to .env and fill in your actual values
 
-# Environment
-ENVIRONMENT=development
-
-# Discord Configuration
+# ================================
+# DISCORD CONFIGURATION
+# ================================
+# Get from: https://discord.com/developers/applications
 DISCORD_BOT_TOKEN=your_discord_bot_token_here
-DISCORD_GUILD_ID=your_discord_guild_id_here
 
-# Twitch Configuration
-TWITCH_CLIENT_ID=your_twitch_client_id_here
-TWITCH_CLIENT_SECRET=your_twitch_client_secret_here
-TWITCH_EVENTSUB_SECRET=your_twitch_eventsub_secret_here
-TWITCH_API_TIMEOUT=30
+# ================================
+# TWITCH CONFIGURATION  
+# ================================
+# Get from: https://dev.twitch.tv/console
+TWITCH_CLIENT_ID=your_twitch_client_id
+TWITCH_CLIENT_SECRET=your_twitch_client_secret
+TWITCH_BOT_TOKEN=your_twitch_bot_oauth_token
 
-# Database Configuration
-DATABASE_URL=postgresql://username:password@host:port/database_name
-DB_POOL_MIN_SIZE=5
-DB_POOL_MAX_SIZE=20
-DB_COMMAND_TIMEOUT=60
+# ================================
+# DATABASE CONFIGURATION
+# ================================
+# PostgreSQL connection string
+# Local: postgresql://username:password@localhost:5432/valhallabot
+# Heroku: postgres://... (automatically provided)
+DATABASE_URL=postgresql://username:password@host:port/database
 
-# Webhook Configuration
-WEBHOOK_URL=https://your-app-name.onrender.com
-WEBHOOK_PORT=8080
-WEBHOOK_MAX_PAYLOAD_SIZE=1048576
-WEBHOOK_SECRET=your_webhook_secret_here
+# ================================
+# WEBHOOK CONFIGURATION
+# ================================
+# Your public webhook URL for Twitch EventSub
+WEBHOOK_URL=https://your-domain.com/eventsub
+# Secret for webhook verification (choose a secure random string)
+EVENTSUB_SECRET=your_secure_webhook_secret_here
 
-# Security Configuration
+# ================================
+# SECURITY CONFIGURATION (Optional)
+# ================================
+# Rate limiting
 RATE_LIMIT_ENABLED=true
+MAX_REQUESTS_PER_MINUTE=60
+
+# IP whitelisting (optional)
+ENABLE_IP_WHITELIST=false
+ALLOWED_IPS=
+
+# Webhook secret (alternative name)
+WEBHOOK_SECRET=your_secure_webhook_secret_here
 MAX_REQUESTS_PER_MINUTE=60
 ENABLE_IP_WHITELIST=false
 ALLOWED_IPS=
