--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,8 @@ services:
     name: valhallabot2
     env: python
     plan: starter
+    region: oregon
+    pythonVersion: "3.11"
     buildCommand: pip install -r requirements.txt
     startCommand: python start.py
     envVars:
