--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ discord.py==2.3.2
 twitchio==2.6.0
 
 # Database
-asyncpg>=0.27.0,<0.29.0
+asyncpg==0.29.0
 
 # HTTP Client and Web Server
 aiohttp==3.9.1
