--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ discord.py==2.3.2
 # Twitch
 twitchio==2.6.0
 
-# Database - Force pre-compiled wheel
-asyncpg==0.28.0
+# Database - PostgreSQL adapter with Python 3.13 support
+psycopg[binary]==3.1.18
 
 # HTTP Client and Web Server
 aiohttp==3.9.1
